@@ -25,57 +25,57 @@ import io.quarkus.test.QuarkusProdModeTest;
 
 public class OpenshiftWithCustomRouteResourceTest {
 
-	private static final String APP_NAME = "openshift-with-custom-route-resource";
+    private static final String APP_NAME = "openshift-with-custom-route-resource";
 
-	@RegisterExtension
-	static final QuarkusProdModeTest config = new QuarkusProdModeTest()
-			.withApplicationRoot((jar) -> jar.addClasses(GreetingResource.class))
-			.setApplicationName(APP_NAME)
-			.setApplicationVersion("0.1-SNAPSHOT")
-			.withConfigurationResource(APP_NAME + ".properties")
-			.addCustomResourceEntry(Path.of("src", "main", "kubernetes", "openshift.yml"),
-					"manifests/" + APP_NAME + "/openshift.yml")
-			.setForcedDependencies(List.of(Dependency.of("io.quarkus", "quarkus-openshift", Version.getVersion())))
-			.addBuildChainCustomizerEntries(
-					new QuarkusProdModeTest.BuildChainCustomizerEntry(CustomProjectRootBuildItemProducerProdMode.class,
-							Collections.singletonList(CustomProjectRootBuildItem.class), Collections.emptyList()));
+    @RegisterExtension
+    static final QuarkusProdModeTest config = new QuarkusProdModeTest()
+            .withApplicationRoot((jar) -> jar.addClasses(GreetingResource.class))
+            .setApplicationName(APP_NAME)
+            .setApplicationVersion("0.1-SNAPSHOT")
+            .withConfigurationResource(APP_NAME + ".properties")
+            .addCustomResourceEntry(Path.of("src", "main", "kubernetes", "openshift.yml"),
+                    "manifests/" + APP_NAME + "/openshift.yml")
+            .setForcedDependencies(List.of(Dependency.of("io.quarkus", "quarkus-openshift", Version.getVersion())))
+            .addBuildChainCustomizerEntries(
+                    new QuarkusProdModeTest.BuildChainCustomizerEntry(CustomProjectRootBuildItemProducerProdMode.class,
+                            Collections.singletonList(CustomProjectRootBuildItem.class), Collections.emptyList()));
 
-	@ProdBuildResults
-	private ProdModeTestResults prodModeTestResults;
+    @ProdBuildResults
+    private ProdModeTestResults prodModeTestResults;
 
-	@Test
-	public void assertGeneratedResources() throws IOException {
-		final Path kubernetesDir = prodModeTestResults.getBuildDir().resolve("kubernetes");
-		assertThat(kubernetesDir)
-				.isDirectoryContaining(p -> p.getFileName().endsWith("openshift.yml"))
-				.satisfies(p -> assertThat(p.toFile().listFiles()).hasSize(2));
-		List<HasMetadata> openshiftList = DeserializationUtil
-				.deserializeAsList(kubernetesDir.resolve("openshift.yml"));
-		assertThat(openshiftList).filteredOn(i -> "Route".equals(i.getKind())).singleElement().satisfies(i -> {
-			assertThat(i).isInstanceOfSatisfying(Route.class, r -> {
-				assertThat(r.getMetadata()).satisfies(m -> {
-					assertThat(m.getName()).isEqualTo(APP_NAME);
-					assertThat(m.getLabels()).contains(entry("foo", "bar"));
-					assertThat(m.getAnnotations()).contains(entry("bar", "baz"));
-					assertThat(m.getAnnotations()).contains(entry("kubernetes.io/tls-acme", "true"));
-				});
-				assertThat(r.getSpec().getPort().getTargetPort().getStrVal()).isEqualTo("http");
-				assertThat(r.getSpec().getTo().getKind()).isEqualTo("Service");
-				assertThat(r.getSpec().getTo().getName()).isEqualTo(APP_NAME);
-			});
-		});
-	}
+    @Test
+    public void assertGeneratedResources() throws IOException {
+        final Path kubernetesDir = prodModeTestResults.getBuildDir().resolve("kubernetes");
+        assertThat(kubernetesDir)
+                .isDirectoryContaining(p -> p.getFileName().endsWith("openshift.yml"))
+                .satisfies(p -> assertThat(p.toFile().listFiles()).hasSize(2));
+        List<HasMetadata> openshiftList = DeserializationUtil
+                .deserializeAsList(kubernetesDir.resolve("openshift.yml"));
+        assertThat(openshiftList).filteredOn(i -> "Route".equals(i.getKind())).singleElement().satisfies(i -> {
+            assertThat(i).isInstanceOfSatisfying(Route.class, r -> {
+                assertThat(r.getMetadata()).satisfies(m -> {
+                    assertThat(m.getName()).isEqualTo(APP_NAME);
+                    assertThat(m.getLabels()).contains(entry("foo", "bar"));
+                    assertThat(m.getAnnotations()).contains(entry("bar", "baz"));
+                    assertThat(m.getAnnotations()).contains(entry("kubernetes.io/tls-acme", "true"));
+                });
+                assertThat(r.getSpec().getPort().getTargetPort().getStrVal()).isEqualTo("http");
+                assertThat(r.getSpec().getTo().getKind()).isEqualTo("Service");
+                assertThat(r.getSpec().getTo().getName()).isEqualTo(APP_NAME);
+            });
+        });
+    }
 
-	public static class CustomProjectRootBuildItemProducerProdMode extends ProdModeTestBuildStep {
+    public static class CustomProjectRootBuildItemProducerProdMode extends ProdModeTestBuildStep {
 
-		public CustomProjectRootBuildItemProducerProdMode(Map<String, Object> testContext) {
-			super(testContext);
-		}
+        public CustomProjectRootBuildItemProducerProdMode(Map<String, Object> testContext) {
+            super(testContext);
+        }
 
-		@Override
-		public void execute(BuildContext context) {
-			context.produce(new CustomProjectRootBuildItem(
-					(Path) getTestContext().get(QuarkusProdModeTest.BUILD_CONTEXT_CUSTOM_SOURCES_PATH_KEY)));
-		}
-	}
+        @Override
+        public void execute(BuildContext context) {
+            context.produce(new CustomProjectRootBuildItem(
+                    (Path) getTestContext().get(QuarkusProdModeTest.BUILD_CONTEXT_CUSTOM_SOURCES_PATH_KEY)));
+        }
+    }
 }
